{{$NEXT}}

1.37   2016-08-14 (TRIAL RELEASE)

- Require the latest Params::ValidationCompiler.


1.36   2016-08-06

- Require namespace::autoclean 0.19.


1.35   2016-08-05

- Use namespace::autoclean in all packages which import anything. Without
  cleaning the namespace, DateTime ends up with "methods" like try and catch
  (from Try::Tiny), which can lead to very confusing bugs. Reported by Mischa
  Schwieger. RT #115983.


1.34   2016-07-06

- Added the leap second coming on December 31, 2016.


1.33   2016-06-29

- Fixed the $dt->set docs to say that you cannot pass a locale (even though
  you can but you'll get a warning) and added more docs for $dt->set_locale.

- Require DateTime::Locale 1.05.

- Require DateTime::TimeZone 2.00.


1.32   2016-06-28

- This release *does not* include any of the changes in the 1.29-1.30 TRIAL
  releases.

- When you pass a locale to $dt->set you will now get a warning suggesting you
  should use $dt->set_locale instead. If you have DateTime::Format::Mail
  installed you should upgrade to 0.0403 or later, since that module will
  trigger this warning.

- Added support for $dt->truncate( to => 'quarter' ). Implemented by Michael
  Conrad. GitHub #17.


1.31   2016-06-18 (TRIAL RELEASE)

- When you pass a locale to $dt->set you will now get a warning suggesting you
  should use $dt->set_locale instead. The previous trial releases didn't allow
  locale to be passed at all, which broke a lot of modules. I've sent PRs, but
  for now the parameter should be allowed (but discouraged). Reported by
  Slaven Resic. RT #115420.


1.30   2016-06-18 (TRIAL RELEASE)

- Require the latest version of Params::ValidationCompiler (0.06). Tests failed
  with 0.01.


1.29   2016-06-17 (TRIAL RELEASE)

- Replaced Params::Validate with Params::ValidationCompiler and Specio. In my
  benchmarks this makes constructing a new DateTime object about 14%
  faster. However, it slows down module load time by about 100 milliseconds